--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "StoryForge"
-version = "0.0.6"
+version = "0.0.7"
 description = "A TUI app that generates short stories and AI images from prompts using a language model."
 authors = [
-    { name = "wom" }
+    { name = "Chris (wom)" }
 ]
 license = "MIT"
 readme = "README.md"
@@ -31,7 +31,6 @@ dependencies = [
     "requests>=2.31.0",
     "pillow>=11.2.1",
     "textual[syntax]>=0.54.1",
-    "textual-dev>=0.00.1",
     "typer>=0.9.0",
     "rich>=13.0.0",
     "platformdirs>=4.2.0",
@@ -54,6 +53,7 @@ dev = [
     "mypy>=1.8.0",
     "pre-commit>=3.6.0",
     "pip>=25.1.1",
+    "textual-dev>=0.00.1",
     "types-PyYAML>=6.0.12"
 ]
 
